Added Lab1 Lab2 and Lab3

--- a/index.html
+++ b/index.html
@@ -1,48 +1,141 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <title> Londres </title>
+    <title>Viajar</title>
     <meta charset="utf-8">
     <meta name="author" content="Guilherme Simão">
-    <meta name="about" content="Website about London">
-    <meta name="keywords" content="London Info">
-    <link rel="stylesheet" href="style.css">
-
+    <meta name="about" content="Website about Beach">
+    <meta name="keywords" content="Info">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 </head>
 
 <body>
-<header class="nav">
-    <p>
-        <b><a href="index.html">Home Page</a></b>
-        <a href="info.html">Info</a>
-        <a href="local.html">Local</a>
-        <a href="multimedia.html">Multimedia</a>
-    </p>
+<header class="navmenu">
+    <nav>
+        <a href="">teste</a>
+        <a href="">teste1</a>
+        <a href="">teste3</a>
+    </nav>
 </header>
 
-    <h1>Londres</h1>
-    <img src="londres.png" alt="Londres"> &nbsp;
-    <img src="wordcloud.png" alt="Words" srcset="">
-    <br>
-    <h2>Introdução</h2>
-    <p>Londres é a maior cidade da Europa e uma das maiores do mundo, com 8,1 milhões de habitantes na área urbana e mais de 14 milhões na área metropolitana. Geograficamente, está dividida em 33 distritos diferentes. </p>
-    <br>
-    <p>Tabela de página</p>
-    <p>
-        <ol type="A">
-            <li>
-                Info: Informação sobre a cidade de <a href="info.html">Londres</a>  
-            </li>
-            <li>
-                Local: Informação sobre o local da cidade de <a href="info.html">Londres</a>  
-            </li>
-            <li>
-                Videos: Videos demonstrativos da cidade de <a href="info.html">Londres</a>  
-            </li>
-        </ol>
 
-    </p>
+
+
+<main>
+    <div id="container">
+        <p>
+            Viajar
+        </p>
+    </div>
+
+    <div id="relative">
+        <img src="https://source.unsplash.com/random/600%C3%97400/?beach,sand" id="beachimage" alt="">
+
+        <p id="photoword">
+            O melhor calmante do mundo é água com sal
+        </p>
+    </div>
+
+    <div class="capitais">
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/lisboa.jpg"  alt="">
+            </div>
+            <div>
+                <p>Lisboa</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/londres.png" alt="">
+            </div>
+            <div>
+                <p>Londres</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/dubai.jpg" alt="">
+
+            </div>
+            <div>
+                <p>Dubai</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/luxemburgo.jpg" alt="">
+            </div>
+            <div>
+                <p>Luxemburgo</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/washington.jpg"  alt="">
+            </div>
+            <div>
+                <p>Washington</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/berlim.jpg" alt="">
+            </div>
+            <div>
+                <p>Berlim</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/madrid.jpg"  alt="">
+            </div>
+            <div>
+                <p>Madrid</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/roma.jpg" alt="">
+            </div>
+            <div>
+                <p>Roma</p>
+            </div>
+        </div>
+        <div>
+            <div class="imagensdiv">
+                <img src="imagens/paris.jpg" alt="">
+            </div>
+            <div>
+                <p>Paris</p>
+            </div>
+        </div>
+    </div>
+
+<div class="quadrados">
+    <div class="quadrado1">
+        <div>Circulo1</div>
+    </div>
+    <div class="quadrado2">
+        <div>Circulo2</div>
+    </div>
+    <div class="quadrado3">
+        <div>Circulo3</div>
+    </div>
+</div>
+
+
+</main>
+
+<footer>
+    Guilherme Simão - a22106142 - ULHT - 2ºAno
+</footer>
 
 </body>
+
+
+
 
 </html>
