--- a/Aula4/paralax.html
+++ b/Aula4/paralax.html
@@ -1,29 +1,20 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Exemplo de Parallax</title>
-	<link rel="stylesheet" href="parallax.css">
-</head>
-<body>
-	<section class="section1">
-		<h1>Bem-vindo ao Exemplo de Parallax</h1>
-		<p>Este é um exemplo de como criar efeitos parallax usando HTML e CSS.</p>
-	</section>
-    <section class="section2">
-        <div class="parallax1"></div>
-        <h2>Seção 2</h2>
-        <p>Esta é a segunda seção da página.</p>
-    </section>
-    
-    <section class="section3">
-        <div class="parallax2"></div>
-        <h2>Seção 3</h2>
-        <p>Esta é a terceira seção da página.</p>
-    </section>
-    
-    <section class="section4">
-        <h2>Contato</h2>
-        <p>Entre em contato conosco para mais informações.</p>
-    </section>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Exemplo de Parallax</title>
+    <link rel="stylesheet" href="paralax.html">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="author" content="Guilherme Simão">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+  </head>
+  <body>
+    <div class="parallax">
+      <div class="bg"></div>
+      <div class="content">
+        <h1>Exemplo de Parallax</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae eros bibendum, aliquam massa vel, sodales libero. Nam tristique, mauris quis feugiat egestas, enim purus vestibulum velit, et dictum odio quam eu nisi.</p>
+      </div>
+    </div>
+  </body>
 </html>
