--- a/Aula4/paralax.html
+++ b/Aula4/paralax.html
@@ -2,18 +2,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Exemplo de Parallax</title>
-    <link rel="stylesheet" href="paralax.html">
+    <link rel="stylesheet" href="paralax.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="author" content="Guilherme Simão">
     <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
   </head>
   <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="paralax.html">Paralax</a></li>
+            <li><a href="#">Querys</a></li>
+          </ul>
+        </nav>
+      </header>
     <div class="parallax">
       <div class="bg"></div>
       <div class="content">
         <h1>Exemplo de Parallax</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae eros bibendum, aliquam massa vel, sodales libero. Nam tristique, mauris quis feugiat egestas, enim purus vestibulum velit, et dictum odio quam eu nisi.</p>
       </div>
     </div>
   </body>
