--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="paralax.html">Paralax</a></li>
-          <li><a href="#">Querys</a></li>
+          <li><a href="video.html">Video</a></li>
         </ul>
       </nav>
     </header>
