--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -11,23 +11,15 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="paralax.html">Paralax</a></li>
+          <li><a href="#">Querys</a></li>
         </ul>
       </nav>
     </header>
     <section class="hero">
       <h1>London</h1>
       <p>If at first you don't succeed, try, try again.</p>
-    </section>
-    <section class="about">
-      <h2>Sobre</h2>
-      <p>Algumas informações sobre a minha cidade.</p>
-    </section>
-    <section class="contact">
-      <h2>Contato</h2>
-      <p>Entre em contato conosco.</p>
     </section>
   </body>
 </html>
