Fixing some errors

--- a/contacto/contactos.html
+++ b/contacto/contactos.html
@@ -41,11 +41,11 @@
                     <li class="dropdown">
                     <a href="#" class="dropbtn">Experiência profissional</a>
                     <div class="dropdown-content">
-                        <a href="./projeto/projetosescola.html">Projetos realizados em diversas UCs</a>
+                        <a href="/projeto/projetosescola.html">Projetos realizados em diversas UCs</a>
                   
-                        <a href="./projeto/projetospessoais.html">Projetos realizados por mim</a>
+                        <a href="/projeto/projetospessoais.html">Projetos realizados por mim</a>
       
-                        <a href="./projeto/projetosfimdecurso.html">Projetos de fim de curso realizados que achei interessantes</a>
+                        <a href="/projeto/projetosfimdecurso.html">Projetos de fim de curso realizados que achei interessantes</a>
                     </div>
                     </li>
                     <li class="dropdown">
@@ -61,7 +61,7 @@
                     </li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Sobre</a></li>
-                    <li><b><a href="contacto/contactos.html">Contacto</a></b></li>
+                    <li><b><a href="/contacto/contactos.html">Contacto</a></b></li>
                     <li><button id="dark-mode"><i class="fas fa-sun"></i>dark-mode</button></li>
                 </ul>
             </nav>            
