--- a/portefolio/projeto/projetosfimdecurso.html
+++ b/portefolio/projeto/projetosfimdecurso.html
@@ -81,8 +81,8 @@
 	</style>
 </head>
 <body>
-	<h1>Sobre este Website</h1>
-	<p>Este website foi criado utilizando as seguintes tecnologias:</p>
+	<h1>Projetos Final de Curso</h1>
+	<p>Top 6 Projetos Finais:</p>
 	<ul>
 		<li>
 			<strong>HTML:</strong> Hypertext Markup Language
