--- a/index.html
+++ b/index.html
@@ -11,33 +11,24 @@
         <nav>
             <ul>
               <li><a href="#">Landing Page</a></li>
-              <li><a href="#">Sobre mim</a></li>
+
               <li class="dropdown">
-                <a href="#" class="dropbtn">Licenciatura</a>
+                <a href="#" class="dropbtn">Sobre Mim</a>
                 <div class="dropdown-content">
-                  <a href="#">Cadeiras</a>
-                  <a href="#">Educação</a>
-                  <a href="#">Escolas</a>
+                  <a href="#" class="dropbtn">Licenciatura</a>
+                  <a href="#" class="dropbtn">Aptidões e competências pessoais</a>
+  
                 </div>
               </li>
-              <li class="dropdown">
-                <a href="#" class="dropbtn">Aptidões e competências pessoais</a>
-                <div class="dropdown-content">
-                  <a href="#">Técnicas</a>
-                  <a href="#">Organizativas</a>
-                  <a href="#">Sociais</a>
-                  <a href="#">Linguísticas</a>
-                </div>
-              </li>
-              <li><a href="#">Interesses e hobbies</a></li>
+
               <li class="dropdown">
                 <a href="#" class="dropbtn">Experiência profissional</a>
                 <div class="dropdown-content">
-                  <a href="./projeto/projetosescola.html">Projetos realizados em diversas UCs</a>
+                  <a href="/projeto/projetosescola.html">Projetos realizados em diversas UCs</a>
                   
-                  <a href="./projeto/projetospessoais.html">Projetos realizados por mim</a>
+                  <a href="/projeto/projetospessoais.html">Projetos realizados por mim</a>
 
-                  <a href="./projeto/projetosfimdecurso.html">Projetos de fim de curso realizados que achei interessantes</a>
+                  <a href="/projeto/projetosfimdecurso.html">Projetos de fim de curso realizados que achei interessantes</a>
                 </div>
               </li>
               <li class="dropdown">
@@ -51,8 +42,8 @@
                 </div>
               </li>
               <li><a href="#">Blog</a></li>
-              <li><a href="./sobre/sobre.html">Sobre</a></li>
-              <li><a href="contacto/contactos.html">Contacto</a></li>
+              <li><a href="/sobre/sobre.html">Sobre</a></li>
+              <li><a href="/contacto/contactos.html">Contacto</a></li>
               <li><button id="dark-mode"><i class="fas fa-sun"></i></button></li>
             </ul>
           </nav>
