--- a/portefolio/projeto/projetosescola.html
+++ b/portefolio/projeto/projetosescola.html
@@ -81,8 +81,8 @@
 	</style>
 </head>
 <body>
-	<h1>Sobre este Website</h1>
-	<p>Este website foi criado utilizando as seguintes tecnologias:</p>
+	<h1>Projetos Escolares</h1>
+	<p>Projetos desenvolvidos no âmbito escolar:</p>
 	<ul>
 		<li>
 			<strong>MineSweeper:</strong> Projeto de 1º Ano de FP
